--- a/aoc2023.cabal
+++ b/aoc2023.cabal
@@ -19,7 +19,10 @@ executable aoc2023
     main-is:          Main.hs
     other-modules:
         Day1
+        Day2
     -- other-extensions:
-    build-depends:    base ^>=4.18.1.0
+    build-depends:
+        base ^>=4.18.1.0
+        , parsec
     hs-source-dirs:   exe
     default-language: GHC2021
